<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GreetingFragment">

    <TextView
        android:id="@+id/greetingMessage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/greeting"
        android:text="@string/greeting"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/greetingContinueButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/green"
        android:text="@string/greeting_start"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/greetingExitButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/greetingMessage" />

    <Button
        android:id="@+id/greetingExitButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/red"
        android:text="@string/greeting_exit"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/greetingContinueButton" />

</androidx.constraintlayout.widget.ConstraintLayout>