<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constraintLayoutButtons"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <com.github.braillesystems.learnbraille.views.BrailleDotView
        android:id="@+id/dotButton1"
        style="@style/brailleDots"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/braille_dots_outer_horizontal_margin"
        android:layout_marginTop="@dimen/braille_dots_outer_vertical_margin"
        android:layout_marginEnd="@dimen/braille_dots_inner_horizontal_margin"
        android:layout_marginBottom="@dimen/braille_dots_inner_vertical_margin"
        android:button="@drawable/round_checkbox"
        android:contentDescription="@string/braille_dot_1"
        android:accessibilityTraversalBefore = "@+id/dotButton2"
        android:scaleX="@dimen/braille_dots_scale_of_one_dot"
        android:scaleY="@dimen/braille_dots_scale_of_one_dot"
        app:layout_constraintBottom_toTopOf="@+id/dotButton2"
        app:layout_constraintEnd_toStartOf="@+id/dotButton4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.22" />

    <com.github.braillesystems.learnbraille.views.BrailleDotView
        android:id="@+id/dotButton2"
        style="@style/brailleDots"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/braille_dots_outer_horizontal_margin"
        android:layout_marginTop="@dimen/braille_dots_inner_vertical_margin"
        android:layout_marginEnd="@dimen/braille_dots_outer_horizontal_margin"
        android:layout_marginBottom="@dimen/braille_dots_inner_vertical_margin"
        android:button="@drawable/round_checkbox"
        android:contentDescription="@string/braille_dot_2"
        android:accessibilityTraversalBefore = "@+id/dotButton3"
        android:scaleX="@dimen/braille_dots_scale_of_one_dot"
        android:scaleY="@dimen/braille_dots_scale_of_one_dot"
        app:layout_constraintBottom_toTopOf="@+id/dotButton3"
        app:layout_constraintEnd_toStartOf="@+id/dotButton5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dotButton1" />

    <com.github.braillesystems.learnbraille.views.BrailleDotView
        android:id="@+id/dotButton3"
        style="@style/brailleDots"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/braille_dots_outer_horizontal_margin"
        android:layout_marginTop="@dimen/braille_dots_inner_vertical_margin"
        android:layout_marginEnd="@dimen/braille_dots_outer_horizontal_margin"
        android:layout_marginBottom="@dimen/braille_dots_outer_vertical_margin"
        android:button="@drawable/round_checkbox"
        android:contentDescription="@string/braille_dot_3"
        android:accessibilityTraversalBefore = "@+id/dotButton4"
        android:scaleX="@dimen/braille_dots_scale_of_one_dot"
        android:scaleY="@dimen/braille_dots_scale_of_one_dot"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/dotButton6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dotButton2" />

    <com.github.braillesystems.learnbraille.views.BrailleDotView
        android:id="@+id/dotButton4"
        style="@style/brailleDots"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/braille_dots_outer_horizontal_margin"
        android:layout_marginTop="@dimen/braille_dots_outer_vertical_margin"
        android:layout_marginEnd="@dimen/braille_dots_outer_horizontal_margin"
        android:layout_marginBottom="@dimen/braille_dots_inner_vertical_margin"
        android:button="@drawable/round_checkbox"
        android:contentDescription="@string/braille_dot_4"
        android:accessibilityTraversalBefore = "@+id/dotButton5"
        android:scaleX="@dimen/braille_dots_scale_of_one_dot"
        android:scaleY="@dimen/braille_dots_scale_of_one_dot"
        app:layout_constraintBottom_toTopOf="@+id/dotButton5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/dotButton1"
        app:layout_constraintTop_toTopOf="parent" />

    <com.github.braillesystems.learnbraille.views.BrailleDotView
        android:id="@+id/dotButton5"
        style="@style/brailleDots"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/braille_dots_inner_horizontal_margin"
        android:layout_marginTop="@dimen/braille_dots_inner_vertical_margin"
        android:layout_marginEnd="@dimen/braille_dots_outer_horizontal_margin"
        android:layout_marginBottom="@dimen/braille_dots_inner_vertical_margin"
        android:button="@drawable/round_checkbox"
        android:contentDescription="@string/braille_dot_5"
        android:accessibilityTraversalBefore = "@+id/dotButton6"
        android:scaleX="@dimen/braille_dots_scale_of_one_dot"
        android:scaleY="@dimen/braille_dots_scale_of_one_dot"
        app:layout_constraintBottom_toTopOf="@+id/dotButton6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/dotButton2"
        app:layout_constraintTop_toBottomOf="@+id/dotButton4" />

    <com.github.braillesystems.learnbraille.views.BrailleDotView
        android:id="@+id/dotButton6"
        style="@style/brailleDots"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/braille_dots_inner_horizontal_margin"
        android:layout_marginTop="@dimen/braille_dots_inner_vertical_margin"
        android:layout_marginEnd="@dimen/braille_dots_outer_horizontal_margin"
        android:layout_marginBottom="@dimen/braille_dots_outer_vertical_margin"
        android:button="@drawable/round_checkbox"
        android:contentDescription="@string/braille_dot_6"
        android:scaleX="@dimen/braille_dots_scale_of_one_dot"
        android:scaleY="@dimen/braille_dots_scale_of_one_dot"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/dotButton3"
        app:layout_constraintTop_toBottomOf="@+id/dotButton5" />

</androidx.constraintlayout.widget.ConstraintLayout>