<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!--    TODO-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/title_text_view"
            android:layout_width="192dp"
            android:layout_height="70dp"
            android:text="ЗАГОЛОВОК!"
            app:layout_constraintBottom_toTopOf="@+id/info_text_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.227" />

        <TextView
            android:id="@+id/info_text_view"
            android:layout_width="191dp"
            android:layout_height="253dp"
            android:text="ИНФОРМАЦИЯ!"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.134" />

        <com.github.braillesystems.learnbraille.views.BrailleDotsView
            android:id="@+id/braille_dots"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:scaleX="@dimen/braille_dots_scale_of_view"
            android:scaleY="@dimen/braille_dots_scale_of_view"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/info_text_view"
            tools:layout_conversion_absoluteHeight="234dp"
            tools:layout_conversion_absoluteWidth="160dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/to_curr_step_button"
            style="@style/sideIconButtons"
            android:layout_width="70dp"
            android:layout_height="115dp"
            android:layout_marginTop="250dp"
            android:layout_marginBottom="32dp"
            android:backgroundTint="@color/colorSecondary"
            android:contentDescription="@string/lessons_progress"
            app:icon="@drawable/to_progress"
            app:layout_constraintBottom_toTopOf="@+id/next_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/sideRightButtonsShape" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/prev_button"
            style="@style/sideIconButtons"
            android:layout_width="70dp"
            android:layout_height="230dp"
            android:contentDescription="@string/lessons_prev"
            app:icon="@drawable/navigate_left"
            app:layout_constraintBottom_toBottomOf="@+id/next_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/next_button"
            app:shapeAppearanceOverlay="@style/sideLeftButtonsShape" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/next_button"
            style="@style/sideIconButtons"
            android:layout_width="70dp"
            android:layout_height="230dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="56dp"
            android:contentDescription="@string/lessons_next"
            app:icon="@drawable/navigate_right"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/to_curr_step_button"
            app:shapeAppearanceOverlay="@style/sideRightButtonsShape" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
